--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,11 @@ nav ul li {
     margin-left: 100px;
 }
 
+.dropbtn:hover{
+    border-radius: 4px 4px 4px 4px;
+    border: 3px solid #1b1b1b;
+}
+
 .dropdown-content {
     display: none;
     position: absolute;
@@ -101,10 +106,15 @@ nav ul li {
     padding: 0 10px;
     font-size: 16px;
     border-radius: 0 4px 4px 0;
-    height: 40px; /* Set height */
+    height: 62px; /* Set height */
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.search button:hover{
+    border-radius: 4px 4px 4px 4px;
+    border: 3px solid #1b1b1b;
 }
 
 .search button img {
